--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
         <div class="u-video-shading"></div>
       </div>
       <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-align-left u-container-align-center u-container-style u-group u-group-1" data-href="https://www.instagram.com/gruap.ba/" data-target="_blank">
+        <div class="u-align-left u-container-align-center u-container-style u-group u-group-1" data-target="_blank">
           <div class="u-container-layout u-container-layout-1">
             <p class="u-align-center u-custom-font u-font-roboto-condensed u-text u-text-white u-text-1">"Sabores envueltos en cada boca​do"</p>
             <p class="u-align-center u-custom-font u-font-roboto-condensed u-text u-text-body-alt-color u-text-2">PROXIMAMENTE<br>SIGUENOS EN<br>
               <a href="https://www.instagram.com/gruap.ba/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-font-roboto-condensed u-hover-none u-none u-text-body-alt-color u-btn-1" target="_blank">@GRUAP.BA</a>
             </p>
             <div class="u-align-center u-border-3 u-border-white u-line u-line-horizontal u-line-1"></div>
-            <img class="u-align-center u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/3225191_app_instagram_logo_media_popular_icon.png" alt="" data-image-width="512" data-image-height="512">
+            <img class="u-align-center u-image u-image-contain u-image-default u-preserve-proportions u-image-1" data-href="https://www.instagram.com/gruap.ba/" src="images/3225191_app_instagram_logo_media_popular_icon.png" alt="" data-image-width="512" data-image-height="512">
             <h6 class="u-align-center u-text u-text-body-alt-color u-text-default u-text-3">Ingresa tu mail y recibe una promocion de lanzamiento 🥳 </h6>
             <div class="u-form u-form-1">
               <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-spacing-32 u-form-vertical u-inner-form" source="email" name="form" style="padding: 10px;">
